# ChromeBrowserOwn

./: .replit  Cargo.toml  browser-app.html  demo.html  package-lock.json  package.json  replit.md  tauri.conf.json
attached_assets/: Pasted-e-browser-own-ChromeBrowserOwn-src-tauri-error-OUT-DIR-env-var-is-not-set-do-you-have-a-build-s-1751471162768_1751471162771.txt
src/: index.html  privacy-lists.js  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  main.rs  privacy.rs  simple_main.rs  storage.rs
