[package]
name = "privacy-browser"
version = "0.1.0"
description = "High-performance privacy-focused browser"
authors = ["Privacy Browser Team"]
license = "MIT"
repository = "https://github.com/privacy-browser/privacy-browser"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "1.0", features = ["api-all", "system-tray"] }
